tests-system/null-value/output
bar.MyType SomeThing {
           ^^^^^^^^^ null-value/instances.trlc:4: error: required component other (see bar.rsl:5) is not defined
Processed 1 model(s), 1 check(s) and 1 requirement file(s) and found 1 error(s)
